[gd_scene load_steps=14 format=2]

[ext_resource path="res://Member.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Concepts/Asan.png" type="Texture" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.741176 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.0980392 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.596078 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.215686, 0.215686, 0.215686, 0.705882 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.376471 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.52549, 0.384314, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 10
shadow_offset = Vector2( 0, 8 )

[sub_resource type="Theme" id=18]
Button/styles/hover = SubResource( 12 )
Button/styles/normal = SubResource( 13 )
Button/styles/pressed = SubResource( 5 )
CheckBox/styles/focus = SubResource( 14 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 6 )
CheckBox/styles/normal = SubResource( 6 )
CheckBox/styles/pressed = SubResource( 6 )
OptionButton/styles/focus = SubResource( 15 )
OptionButton/styles/hover = SubResource( 6 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 6 )
Panel/styles/panel = SubResource( 17 )

[sub_resource type="DynamicFont" id=19]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 12
font_data = ExtResource( 3 )

[node name="Member" type="Panel"]
margin_left = 480.0
margin_right = 672.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
rect_pivot_offset = Vector2( 96, 160 )
size_flags_horizontal = 9
size_flags_vertical = 9
theme = SubResource( 18 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.208
anchor_top = 0.208
anchor_right = 0.792
anchor_bottom = 0.792
margin_left = 0.0639992
margin_top = 0.0639992
margin_right = -0.0640106
margin_bottom = -0.0640106
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="."]
anchor_left = 0.083
anchor_top = 0.042
anchor_right = 0.917
anchor_bottom = 0.125
margin_left = 0.0639992
margin_top = -0.0640011
margin_right = -0.0640106
text = "sdsd"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
anchor_left = 0.083
anchor_top = 0.125
anchor_right = 0.917
anchor_bottom = 0.208
margin_left = 0.0639992
margin_right = -0.0640106
margin_bottom = 0.0639992
custom_fonts/font = SubResource( 19 )
text = "sdsd"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.083
anchor_top = 0.792
anchor_right = 0.917
anchor_bottom = 0.958
margin_left = 0.0639992
margin_top = -0.0640106
margin_right = -0.0640106
margin_bottom = 0.0639954
custom_fonts/font = SubResource( 20 )
text = "sdsd"
align = 1
valign = 1
autowrap = true

[connection signal="gui_input" from="." to="." method="_on_Member_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Member_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Member_mouse_exited"]
